# nebula

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pydocstyle  .pylintrc  README.md  count.py  lint-requirements.txt  narwhals_example.py  pyproject.toml  pytest.ini  ruff.toml  setup.py  test-requirements.txt  test_narwhals_migration.py  tox.ini
.claude/: settings.local.json
.github/workflows/: ci.yml
ai/: 01_overview.md  02_transformer_catalog.md  03_pipeline_patterns.md  04_yaml_config.md  05_backend_migration.md  06_rules_constraints.md
example_notebooks/: 01_flat_pipeline-Copy1.ipynb  01_flat_pipeline-Copy2.ipynb  01_flat_pipeline.ipynb  01_flat_pipeline_OLD.ipynb  02_split_pipeline-Copy1.ipynb  02_split_pipeline.ipynb  03_branching_and_row_operations.ipynb  03_extra_transformers.ipynb  03a_branching.ipynb  03b_apply_to_rows.ipynb  03c_skip_options.ipynb  04_nebula_storage.ipynb  04_storage_and_runtime.ipynb  05_cache_if_fail.ipynb  05_configuration_driven.ipynb  05a_configuration_basics.ipynb  05b_configuration_advanced.ipynb  06_compound_pipeline.ipynb  06_custom_transformers.ipynb  06_duckdb_backend.ipynb  07_custom_transformers.ipynb  07_interleaved_transformers.ipynb  07_real_world_example.ipynb  08_branches.ipynb  08_real_world_example.ipynb  08_spark_debugging.ipynb  09.ipynb  branches.ipynb  custom_transformers.py
nlsn/: __init__.py
nlsn/nebula/: __init__.py  auxiliaries.py  backend_util.py  base.py  deprecations.py  df_types.py  helpers.py  logger.py  metaclasses.py  nw_util.py  spark_udfs.py  spark_util.py  storage.py  ts_util.py
nlsn/nebula/pandas_polars_transformers/: __init__.py  debug.py
nlsn/nebula/pipelines/: __init__.py  _checks.py  _dag.py  _df_funcs.py  _graphviz.py  _html_viz.css  _html_viz.py  _pandas_split_functions.py  _polars_split_functions.py  _spark_split_functions.py  auxiliaries.py  exceptions.py  loop_expansion.py  loop_exploder.py  pipe_aux.py  pipeline_loader.py  pipelines.py  transformer_type_util.py  util.py
nlsn/nebula/shared_transformers/: __init__.py  collection.py  columns.py  debug.py  filters.py  logs.py  numerical.py  schema.py
nlsn/nebula/spark_transformers/: __init__.py  _constants.py  aggregations.py  arrays.py  assertions.py  cleanup.py  collection.py  columns.py  debug.py  filters.py  logs.py  mappings.py  ml.py  numerical.py  partitions.py  schema.py  strings.py  tables.py  temporal.py
nlsn/nebula/transformers/: __init__.py  _constants.py  assertions.py  collections.py  columns.py  combining.py  debug.py  filtering.py  logs.py  meta.py  numerical.py  reshaping.py  schema.py  selection.py  spark_partitions.py  spark_tables.py  spark_transformers.py
nlsn/scripts/: __init__.py  make_readme.py  run_test_full.py  run_test_no_spark.py  static_readme_install.md  static_readme_standards.md
nlsn/tests/: __init__.py  auxiliaries.py  conftest.py  constants.py  test_auxiliaries.py  test_base.py  test_deprecations.py  test_df_types.py  test_helpers.py  test_metaclasses.py  test_nebula_storage.py  test_nw_util.py  test_spark_udfs.py  test_spark_util.py  test_transformer_syntax.py  test_ts_util.py
nlsn/tests/test_pipelines/: __init__.py  _shared.py  apply_to_rows_configs.py  auxiliaries.py  branch_configs.py  test_apply_to_rows.py  test_branch.py  test_cache_to_nebula_storage_util.py  test_checks_module.py  test_complex_pipeline.py  test_create_stages.py  test_flat_pipeline.py  test_keywords.py  test_laziness.py  test_loop.py  test_loop_exploder.py  test_miscellaneous.py  test_pipeline_assertions.py  test_pipeline_auxiliaries.py  test_pipeline_errors.py  test_pipeline_loader.py  test_pipeline_loader_dry_run.py  test_pipeline_util.py  test_skip.py  test_split_pipeline.py  test_transformer_type.py
nlsn/tests/test_transformers/: __init__.py  test_assertions.py  test_collections.py  test_columns.py  test_combining.py  test_debug.py  test_filtering.py  test_inject_data.py  test_logs.py  test_meta.py  test_reshaping.py  test_schema.py  test_selection.py  test_spark_partitions.py  test_spark_tables.py  test_spark_transformers.py
scripts/: run_test_no_spark.py  static_readme_install.md  static_readme_standards.md
src/: __init__.py
src/nebula/: __init__.py  auxiliaries.py  backend_util.py  base.py  df_types.py  helpers.py  logger.py  metaclasses.py  nw_util.py  spark_udfs.py  spark_util.py  storage.py
src/nebula/pipelines/: _checks.py  _dag.py  _graphviz.py  exceptions.py  loop_expansion.py  pipe_aux.py  pipe_cfg.py  pipeline.py  pipeline_loader.py  pipelines.py  transformer_type_util.py  util.py
src/nebula/transformers/: __init__.py  _constants.py  assertions.py  collections.py  combining.py  debug.py  filtering.py  meta.py  reshaping.py  schema.py  selection.py  spark_transformers.py
tests/: __init__.py  auxiliaries.py  conftest.py  constants.py  test_auxiliaries.py  test_base.py  test_df_types.py  test_helpers.py  test_metaclasses.py  test_nebula_storage.py  test_nw_util.py  test_spark_udfs.py  test_spark_util.py  test_transformer_syntax.py
tests/test_pipelines/: __init__.py  apply_to_rows_configs.py  auxiliaries.py  branch_configs.py  conftest.py  pipeline_configs.py  test_apply_to_rows.py  test_branch.py  test_complex_pipeline.py  test_flat_pipeline.py  test_keywords.py  test_laziness.py  test_loop.py  test_miscellaneous.py  test_pipeline_errors.py  test_pipeline_functions.py  test_pipeline_loader.py  test_skip.py  test_split_pipeline.py
tests/test_pipelines/test_util/: __init__.py  test_cache_to_nebula_storage_util.py  test_checks_module.py  test_create_stages.py  test_lazy_loader.py  test_loop_expansion.py  test_pipe_aux.py  test_pipeline_assertions.py  test_pipeline_aux.py  test_pipeline_loader_dry_run.py  test_pipeline_util.py  test_transformer_type.py
tests/test_pipelines/yml_files/: empty_split.yml  laziness.yml  loop.yml  mock.yml  (+2 more)
tests/test_transformers/: __init__.py  test_assertions.py  test_collections.py  test_combining.py  test_debug.py  test_filtering.py  test_inject_data.py  test_meta.py  test_reshaping.py  test_schema.py  test_selection.py  test_spark_transformers.py
(+170 files in other folders)
