[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlsnnebula"
version = "0.0.1"
description = "Declarative data transformation pipelines for Pandas, Polars, and PySpark"
authors = [
    { name = "DSci Global Platform Support Team", email = "dscigps@nielsen.com" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["etl", "pipeline", "dataframe", "pandas", "polars", "pyspark", "narwhals", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
license = { file = "LICENSE" }
dependencies = [
    "narwhals>=2.0.0",
]

[project.urls]
Homepage = "http://www.nielsen.com"
Source = "https://github.com/nielsen-oss/nebula"

[project.optional-dependencies]
# Backend support
pandas = ["pandas>=1.2.5"]
polars = ["polars>=1.34.0"]
spark = ["pyspark>=3.5.0"]

# All backends
all = [
    "pandas>=1.2.5",
    "polars>=1.34.0",
    "pyspark>=3.5.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.4",
    "pytest-cov",
    "coverage",
    "pre-commit>=4.3.0",
    "ruff>=0.1.0",
]

# Testing with all backends
test = [
    "nlsnnebula[all]",
    "pytest>=7.4.4",
    "pytest-cov",
    "chispa", # For Spark DataFrame comparison
]

# Pipeline visualization
viz = [
    "graphviz",
]

# Performance/utilities
utils = [
    "py-cpuinfo",
    "pyarrow",
    "orjson",
    "pyyaml",
]

# Everything
full = [
    "nlsnnebula[all,dev,test,viz,utils]",
]

[tool.setuptools.packages.find]
include = ["nlsn", "nlsn.*"]
namespaces = true

[tool.ruff]
# Set the line length, just like Black
line-length = 88
# Fix all fixable errors
fix = true

[tool.ruff.lint]
# Enable all the rule sets you were using before:
# E/F: pyflakes/pycodestyle (standard)
# I: isort
# D: pydocstyle
# PL: pylint
select = ["E", "F", "I", "D", "PL"]

# Ignore any specific rules you don't like
# ignore = ["D100", "PLR2004"]

# --- Pydocstyle configuration ---
[tool.ruff.lint.pydocstyle]
# This mimics using a config file for docstring convention
# Options: "google", "numpy", "pep257"
convention = "google"

# --- Pylint configuration ---
[tool.ruff.lint.pylint]
# Example: set max-args, just like in .pylintrc
max-args = 6

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
