[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula"
version = "0.0.1"
description = "Declarative data transformation pipelines for Pandas, Polars, and PySpark"
authors = [
    { name = "DSci Global Platform Support Team", email = "dscigps@nielsen.com" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["etl", "pipeline", "dataframe", "pandas", "polars", "pyspark", "narwhals", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
license = { file = "LICENSE" }
dependencies = [
    "narwhals>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/nielsen-oss/nebula"
Documentation = "https://github.com/nielsen-oss/nebula#readme"
Source = "https://github.com/nielsen-oss/nebula"
Issues = "https://github.com/nielsen-oss/nebula/issues"

[project.optional-dependencies]
# Backend support
pandas = ["pandas>=1.2.5"]
polars = ["polars>=1.34.0"]
spark = ["pyspark>=3.5.0"]

# All backends
all = [
    "pandas>=1.2.5",
    "polars>=1.34.0",
    "pyspark>=3.5.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.4",
    "pytest-cov",
    "coverage",
    "pre-commit>=4.3.0",
    "ruff>=0.1.0",
]

# Testing with all backends
test = [
    "nebula[all]",
    "pytest>=7.4.4",
    "pytest-cov",
    "chispa",
]

# Pipeline visualization
viz = [
    "graphviz",
    "pyyaml",
]

# Performance/utilities
utils = [
    "py-cpuinfo",
    "pyarrow",
    "orjson",
    "pyyaml",
]

# Everything
full = [
    "nebula[all,dev,test,viz,utils]",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

# --- Pytest configuration ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=nebula --cov-report=term-missing"

# --- Ruff configuration ---
[tool.ruff]
line-length = 88
fix = true
src = ["src", "tests"]

[tool.ruff.lint]
# Enable all the rule sets you were using before:
# E/F: pyflakes/pycodestyle (standard)
# I: isort
# D: pydocstyle
# PL: pylint
select = ["E", "F", "I", "D", "PL"]

# ignore = ["D100", "PLR2004"]

# --- Pydocstyle configuration ---
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Coverage configuration ---
[tool.coverage.run]
source = ["src/nebula"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]