[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula"
version = "0.0.1"
description = "Declarative data transformation pipelines for Pandas, Polars, and PySpark"
authors = [
    { name = "DSci Global Platform Support Team", email = "dscigps@nielsen.com" },
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["etl", "pipeline", "dataframe", "pandas", "polars", "pyspark", "narwhals", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
license = { file = "LICENSE" }
dependencies = [
    "narwhals>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/nielsen-oss/nebula"
Documentation = "https://github.com/nielsen-oss/nebula#readme"
Source = "https://github.com/nielsen-oss/nebula"
Issues = "https://github.com/nielsen-oss/nebula/issues"

[project.optional-dependencies]
# Backend support
pandas = ["pandas>=1.2.5"]
polars = ["polars>=1.34.0"]
spark = ["pyspark>=3.5.0"]

# All backends
all = [
    "pandas>=1.2.5",
    "polars>=1.34.0",
    "pyspark>=3.5.0",
]

# Development dependencies
dev = [
    # All backends
    "pandas>=1.2.5",
    "polars>=1.34.0",
    "pyspark>=3.5.6",  # Pin specific version for CI consistency
    # Testing
    "pytest>=7.4.4",
    "pytest-cov",
    "coverage",
    "chispa",  # Spark testing utilities
    # Code quality
    "pre-commit>=4.3.0",
    "ruff>=0.1.0",
    # Visualization
    "graphviz",
    "pyyaml",
    # Utilities
    "py-cpuinfo",
    "pyarrow",
    "orjson",
]

# Pipeline visualization
viz = [
    "graphviz",
    "pyyaml",
]

# Full
full = [
    "nebula[all,dev,test,viz,utils]",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

# --- Pytest configuration ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=nebula --cov-report=term-missing"

# --- Ruff configuration ---
[tool.ruff]
line-length = 120
fix = true
src = ["src", "tests"]

[tool.ruff.lint]
# Enable all the rule sets you were using before:
# E/F: pyflakes/pycodestyle (standard)
# I: isort
# D: pydocstyle
# PL: pylint
select = ["E", "F", "I", "D", "PL"]

ignore = [
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "F403",  # unable to detect undefined names
    "F405",  # may be undefined, or defined from star imports
    "E741",  # Ambiguous variable name: `l`
    "PLC0415", # `import` should be at the top-level of a file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
]

exclude = [
    "*.ipynb",
    "notebooks/",
]

# --- Pydocstyle configuration ---
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

exclude = [
    "*.ipynb",
    "notebooks/",
]

[tool.ruff.lint.extend-per-file-ignores]
"src/nebula/pipelines/execution/hooks.py" = [
    "D102", # Missing docstring in public method
]

"src/nebula/transformers/**" = [
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
]

"tests/**" = [
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D107", # Missing docstring in `__init__`
    "E501", # Line too long
    "E722", # Do not use bare `except`
    "PLC0415", # `import` should be at the top-level of a file
]

# --- Coverage configuration ---
[tool.coverage.run]
source = ["src/nebula"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 80
show_missing = true

# --- Mypy configuration ---
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "venv/", "scripts/", "example_notebooks/"]
